--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --preifix client && npm run build --prifix client"
   },
   "author": "",
   "license": "ISC",
