--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "description": "",
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
     "express": "^4.16.3",
+    "mongoose": "^5.0.12",
     "nodemon": "^1.17.2"
   }
 }
